--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ margin:50px;
   width: 60%;
   font-size: 16px;
   padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
+  border: 1px solid black;
   margin-bottom: 20px;
 }
 
@@ -19,6 +19,7 @@ table, th, td {
   border-collapse: collapse;
   background-color: #f1f1f1;
   padding: 5px;
+  margin-bottom:15px;
 
 }
 .pg-normal {
